2005-10-07  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-LaserJet_2430.xml: Added IEEE 1284 information (RH
	  bug #170020).

2005-09-28  Till Kamppeter <till.kamppeter@gmx.net>

	* db/sorce/PPD/Kyocera: Added the current Kyocera PPDs (from
	  /download/PPD/Kyocera/20050401/) to the foomatic-db package.

2005-09-12 George Liu <george.liu@ussj.ricoh.com>
	* db/source/PPD:     added 23 Ricoh Family and OEM Postscript printer PPD files.
	* db/source/printer: added 23 Ricoh Family and OEM printer xml files.
	* db/source/driver:  updated Postscript.xml to include new printers
	
2005-09-08 Jacqueline Pitter <jacqueline.pitter@hp.com>
	* db/source/printer: added HP-PhotoSmart_3100.xml,
				   HP-PhotoSmart_3200.xml,
				   HP-PhotoSmart_3300.xml,
				   HP-PhotoSmart_7800.xml,
				   HP-PhotoSmart_8000.xml,
				   HP-DeskJet_5440.xml,
				   HP-DeskJet_5940.xml,
				   HP-Color_LaserJet_4700.xml.
	* db/source/driver: updated Postscript.xml to include HP-Color_LaserJet_4700.

2005-09-05  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-LaserJet_5000.xml: Added IEEE 1284 information (RH
	  bug #167154).

	* printer/HP-LaserJet_4200.xml: Added IEEE 1284 information (RH
	  bug #166638).

2005-09-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_4100.xml, printer/HP-OfficeJet_4200.xml,
	  printer/HP-OfficeJet_5500.xml, printer/HP-OfficeJet_5600.xml,
	  printer/HP-OfficeJet_6100.xml, printer/HP-OfficeJet_6150.xml,
	  printer/HP-OfficeJet_6200.xml, printer/HP-OfficeJet_7100.xml,
	  printer/HP-OfficeJet_7200.xml, printer/HP-OfficeJet_7300.xml,
	  printer/HP-OfficeJet_7400.xml, printer/HP-PSC_1300.xml,
	  printer/HP-PSC_1510.xml, printer/HP-PSC_1600.xml,
	  printer/HP-PSC_2170.xml, printer/HP-PSC_2300.xml,
	  printer/HP-PSC_2350.xml, printer/HP-PSC_2400.xml,
	  printer/HP-PSC_2500.xml: Corrected SANE links.

	* printer/HP-PSC_1510.xml: Added HP PSC 1510.

2005-08-29  George Liu <george.liu@ussj.ricoh.com>

	* Started to integrate manufacture-PPD into foomatic-db. 