@@ -21,7 +21,11 @@
     <proprietary/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <manufacturer>EPSON</manufacturer>
+    <model>EPL-6200L</model>
+    <description>EPSON EPL-6200L</description>
+    <commandset>ESCPAGES-02</commandset>
+  </autodetect>
   <functionality>B</functionality>
   <driver>epl6200l</driver>
   <!--verified--><!--no "contrib_url"-->
