@@ -1,3 +1,8 @@
+2005-10-11  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/Epson-EPL-6200L.xml: Added IEEE 1284 information (RH
+	  bug #170373).
+
 2005-10-07  Tim Waugh  <twaugh@redhat.com>
 
 	* printer/HP-LaserJet_2430.xml: Added IEEE 1284 information (RH
